# e_task

./: README.md  e_task.postman_collection.json  e_task_env.postman_environment.json
behave_restful/: pyproject.toml
behave_restful/features/: environment.py  testing_api.feature
pytest/: api_test.py  pyproject.toml
