[tool.poetry]
name = "behave_restful_e_task"
version = "0.1.0"
description = ""
authors = ["jaroslawkurek <jaroslaw.kurek@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
behave-restful = "^0.4.3"
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
