[tool.poetry]
name = "pytest_approach"
version = "0.1.0"
description = ""
authors = ["jaroslawkurek <jaroslaw.kurek@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
requests = "^2.28.1"
pytest-schema = "^0.1.1"
flake8 = "^6.0.0"
isort = "^5.11.4"
black = "^22.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
